# asset-io

./: .gitignore  API_IMPROVEMENT_WRITE_RETURNS_STRUCTURE.md  BENCHMARK_QUICKSTART.md  BENCHMARK_README.md  BMFF_FIX_SUMMARY.md  BMFF_HASH_ISSUE.md  BMFF_IMPLEMENTATION.md  BMFF_STATUS.md  BMFF_V2_STREAMING_ISSUE.md  BMFF_V3_IMPLEMENTATION.md  BMFF_V3_STATUS.md  BMFF_WRITING_COMPLETE.md  C2PA_COMPLIANCE.md  Cargo.toml  EMBEDDABLE_API_EXAMPLE.md  FEATURE_SEPARATION.md  FIXTURE_REDUCTION.md  FUZZING_FINDINGS.md  FUZZING_SETUP.md  HARDWARE_HASHING.md  IN_PLACE_UPDATES.md  JUMBF_REGRESSION.md  Makefile  PARALLEL_BMFF_V3.md  PERFORMANCE_BENCHMARK.md  README.md  SINGLE_PASS_DESIGN.md  STREAMING_WRITE_IMPLEMENTATION.md  TESTING.md  TEST_COVERAGE_COMPLETE.md  THUMBNAILS.md  XMP_EXTENDED.md  benchmark_c2pa.sh  benchmark_embeddable.sh  benchmark_memory.py  benchmark_simple.sh  benchmark_v3_comparison.sh  demo_fixtures.sh  fuzz.sh
.github/workflows/: ci.yml
benches/: io.rs
docs/: FIXTURE_TEST_RESULTS.md  OPERATIONS.md  REFACTORING_FORMAT_SPECIFIC_JUMBF.md  SAFETY.md  XMP_EXTENDED.md
examples/: C2PA_README.md  C2PA_REMOVAL.md  SHA256_DEMO.md  api_quick_reference.rs  asset_demo.rs  bench_hash_only.rs  bmff_c2pa_hash.rs  bmff_v3_hash.rs  c2pa.rs  c2pa_embeddable.rs  c2pa_integration.rs  c2pa_streaming.rs  debug_png.rs  format_info.rs  hash_benchmark.rs  hash_demo.rs  inspect.rs  inspect_segments.rs  list_media_types.rs  mmap_comparison.rs  mmap_demo.rs  parallel_hash.rs  png_demo.rs  progress_cancel.rs  sha256_demo.rs  test_all_combinations.rs  test_bmff.rs  test_bmff_hash.rs  test_bmff_write.rs  test_fixtures.rs  test_large_164mb.rs  test_mmap.rs  test_png_exif.rs  test_png_jumbf_write.rs  test_processing_writer_png.rs  test_xmp_extended.rs  thumbnail_demo.rs  update_jumbf.rs  update_xmp_field.rs  virtual_asset.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_parse.rs  fuzz_write.rs  fuzz_xmp.rs
src/: asset.rs  error.rs  lib.rs  media_type.rs  processing_writer.rs  segment.rs  structure.rs  test_utils.rs  thumbnail.rs  tiff.rs  updates.rs  xmp.rs
src/containers/: bmff_io.rs  jpeg_io.rs  mod.rs  png_io.rs  riff_io.rs
src/formats/: bmff_io.rs  jpeg.rs  jpeg_io.rs  mod.rs  png.rs  png_io.rs
tests/: integration_test.rs  safety_test.rs
tests/fixtures/: README.md  c2patool_manifest.json  minimal_manifest.json  test_settings.json
