[package]
name = "asset-io"
version = "0.1.0"
edition = "2021"
authors = ["Gavin Peacock <gpeacock@adobe.com>"]
license = "MIT OR Apache-2.0"
description = "High-performance, media type-agnostic streaming I/O for media asset metadata (JUMBF, XMP, C2PA, thumbnails)"
repository = "https://github.com/contentauth/asset-io"
keywords = ["asset", "c2pa", "xmp", "jumbf", "metadata"]
categories = ["multimedia", "parsing"]

[dependencies]
# Core I/O
thiserror = "1.0"

# Optional dependencies - tied to specific features
byteorder = { version = "1.5", optional = true }
md5 = { version = "0.7", optional = true }
quick-xml = { version = "0.38", optional = true, default-features = false }
memmap2 = { version = "0.9", optional = true }
fs2 = { version = "0.4", optional = true }
atree = { version = "0.5", optional = true }

[dev-dependencies]
c2pa = "0.72"
sha2 = "0.10"  # For examples only

[features]
default = ["jpeg", "test-utils"]
jpeg = ["byteorder","md5"]
png = ["byteorder"]
bmff = ["byteorder", "atree"]
exif = []
xmp = ["quick-xml", "md5"]
memory-mapped = ["memmap2", "fs2"]
all-formats = ["jpeg", "png", "bmff"]

# TEMPORARY: C2PA testing feature (delete after validation)
c2pa-test = []  # Enables C2PA integration tests in examples

# Note: At least one format feature (jpeg, png) must be enabled for the library to compile.

# Testing features
# embed-fixtures: Compile small test fixtures into the binary (faster CI, no file I/O)
# test-utils: Make test utilities available (enabled by default, disable with --no-default-features for production)
embed-fixtures = []
test-utils = []

[[example]]
name = "c2pa"
required-features = ["xmp"]

[[example]]
name = "inspect"
required-features = ["xmp"]

[[example]]
name = "virtual_asset"
required-features = ["xmp"]

[[example]]
name = "test_mmap"
required-features = ["memory-mapped"]

[[example]]
name = "hash_benchmark"
required-features = ["xmp", "memory-mapped"]

[[example]]
name = "mmap_comparison"
required-features = ["xmp", "memory-mapped"]

[[example]]
name = "test_bmff_hash"
required-features = ["bmff"]

[[example]]
name = "bmff_v3_hash"
required-features = ["bmff"]

[[example]]
name = "bmff_c2pa_hash"
required-features = ["bmff"]

[[example]]
name = "bench_hash_only"

[[example]]
name = "test_bmff"
required-features = ["bmff"]

[[example]]
name = "test_bmff_write"
required-features = ["bmff", "xmp"]

[[example]]
name = "c2pa_streaming"
required-features = ["xmp"]

[[example]]
name = "update_jumbf"
required-features = ["jpeg", "xmp"]

[[example]]
name = "test_large_164mb"
required-features = ["bmff"]

[[example]]
name = "update_xmp_field"
required-features = ["jpeg", "xmp"]

[[example]]
name = "test_processing_writer_png"
required-features = ["png"]

[[example]]
name = "test_png_jumbf_write"
required-features = ["png"]

[[example]]
name = "test_all_combinations"
required-features = ["jpeg", "xmp"]

[[example]]
name = "test_xmp_extended"
required-features = ["jpeg", "xmp"]

[[example]]
name = "test_png_exif"
required-features = ["png", "exif"]

[[example]]
name = "test_fixtures"
required-features = ["jpeg", "xmp"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
